[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Open_Sans.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/UI/Fonts/OpenSans-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/scripts/keybinds.gd" type="Script" id=4]
[ext_resource path="res://assets/font/Open_Sans_24.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Options" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 472, -21 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBox"]
margin_right = 1024.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 92.0
margin_right = 1024.0
margin_bottom = 143.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Button" parent="Panel/VBox/HBoxContainer"]
margin_left = 162.0
margin_right = 264.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Audio"
flat = true

[node name="Video" type="Button" parent="Panel/VBox/HBoxContainer"]
margin_left = 304.0
margin_right = 403.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Video"
flat = true

[node name="Controls" type="Button" parent="Panel/VBox/HBoxContainer"]
margin_left = 443.0
margin_right = 587.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Controls"
flat = true

[node name="GameOptions" type="Button" parent="Panel/VBox/HBoxContainer"]
margin_left = 627.0
margin_right = 861.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Game Options"
flat = true

[node name="Container" type="VBoxContainer" parent="Panel/VBox"]
margin_top = 147.0
margin_right = 1024.0
margin_bottom = 542.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Panel/VBox/Container"]
margin_right = 1024.0
margin_bottom = 395.0
rect_min_size = Vector2( 1024, 395 )
custom_fonts/font = ExtResource( 2 )
text = "Welcome to the options! 
Today we serve unchangable values!"
align = 1
valign = 1

[node name="Audio" type="ScrollContainer" parent="Panel/VBox/Container"]
visible = false
margin_right = 1024.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 395 )
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Container/Audio"]
margin_right = 1024.0
margin_bottom = 203.0
rect_min_size = Vector2( 1024, 0 )
alignment = 1

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/Container/Audio/HBox"]
margin_left = 256.0
margin_right = 768.0
margin_bottom = 65.0
rect_min_size = Vector2( 512, 0 )
alignment = 1

[node name="Master" type="Label" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_right = 512.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_top = 49.0
margin_right = 512.0
margin_bottom = 65.0

[node name="Music" type="Label" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_right = 512.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_top = 49.0
margin_right = 512.0
margin_bottom = 65.0

[node name="SoundEffects" type="Label" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_right = 512.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Sound Effects"

[node name="SoundEffectsSlider" type="HSlider" parent="Panel/VBox/Container/Audio/HBox/VBox"]
margin_top = 49.0
margin_right = 512.0
margin_bottom = 65.0

[node name="Video" type="ScrollContainer" parent="Panel/VBox/Container"]
visible = false
margin_right = 1024.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 395 )

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Container/Video"]
margin_right = 1024.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/Container/Video/HBox"]
margin_left = 337.0
margin_right = 687.0
margin_bottom = 395.0
rect_min_size = Vector2( 512, 0 )

[node name="fullscreen" type="CheckBox" parent="Panel/VBox/Container/Video/HBox/VBox"]
margin_right = 350.0
margin_bottom = 53.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fullscreen"

[node name="resolution" type="HBoxContainer" parent="Panel/VBox/Container/Video/HBox/VBox"]
margin_top = 57.0
margin_right = 350.0
margin_bottom = 108.0
rect_min_size = Vector2( 350, 50 )

[node name="less" type="Button" parent="Panel/VBox/Container/Video/HBox/VBox/resolution"]
margin_right = 50.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 2 )
text = "<"

[node name="Label" type="Label" parent="Panel/VBox/Container/Video/HBox/VBox/resolution"]
margin_left = 54.0
margin_top = 3.0
margin_right = 296.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "???? x ????"
align = 1
valign = 1

[node name="more" type="Button" parent="Panel/VBox/Container/Video/HBox/VBox/resolution"]
margin_left = 300.0
margin_right = 350.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="Controls" type="ScrollContainer" parent="Panel/VBox/Container"]
visible = false
margin_right = 1024.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 395 )
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Container/Controls"]
margin_right = 1024.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 4 )

[node name="VBoxLeft" type="VBoxContainer" parent="Panel/VBox/Container/Controls/HBox"]
margin_left = 154.0
margin_right = 504.0
margin_bottom = 536.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/jump"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Jump"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/jump"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="move_left" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 54.0
margin_right = 350.0
margin_bottom = 104.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_left"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Move Left"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_left"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="move_right" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 108.0
margin_right = 350.0
margin_bottom = 158.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_right"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Move Right"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_right"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="move_down" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 162.0
margin_right = 350.0
margin_bottom = 212.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_down"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Drop Down"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/move_down"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="sprint" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 216.0
margin_right = 350.0
margin_bottom = 266.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/sprint"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Sprint"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/sprint"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="crouch" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 270.0
margin_right = 350.0
margin_bottom = 320.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/crouch"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Crouch"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/crouch"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="use" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 324.0
margin_right = 350.0
margin_bottom = 374.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/use"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Use"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/use"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="pause" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 378.0
margin_right = 350.0
margin_bottom = 428.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/pause"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Pause"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/pause"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="reload" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft"]
margin_top = 432.0
margin_right = 350.0
margin_bottom = 482.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/reload"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Reload"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxLeft/reload"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="VBoxRight" type="VBoxContainer" parent="Panel/VBox/Container/Controls/HBox"]
margin_left = 508.0
margin_right = 858.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( -889, -51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_reset" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxRight"]
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/game_reset"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Game Reset"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/game_reset"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="debug" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxRight"]
margin_top = 54.0
margin_right = 350.0
margin_bottom = 104.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/debug"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Debug"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/debug"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="weapon1" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxRight"]
margin_top = 108.0
margin_right = 350.0
margin_bottom = 158.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/weapon1"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Weapon 1"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/weapon1"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="weapon2" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxRight"]
margin_top = 162.0
margin_right = 350.0
margin_bottom = 212.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/weapon2"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Weapon 2"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/weapon2"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="knife" type="HBoxContainer" parent="Panel/VBox/Container/Controls/HBox/VBoxRight"]
margin_top = 378.0
margin_right = 350.0
margin_bottom = 428.0
rect_min_size = Vector2( 350, 50 )

[node name="Label" type="Label" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/knife"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Knife"

[node name="Button" type="Button" parent="Panel/VBox/Container/Controls/HBox/VBoxRight/knife"]
margin_left = 254.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = true

[node name="GameOptions" type="ScrollContainer" parent="Panel/VBox/Container"]
visible = false
margin_top = 399.0
margin_right = 1024.0
margin_bottom = 794.0
rect_min_size = Vector2( 0, 395 )

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Container/GameOptions"]
margin_right = 1024.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/Container/GameOptions/HBox"]
margin_left = 256.0
margin_right = 768.0
margin_bottom = 395.0
rect_min_size = Vector2( 512, 0 )

[node name="always_aim" type="CheckBox" parent="Panel/VBox/Container/GameOptions/HBox/VBox"]
margin_right = 512.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = " Manual Aim Mode"

[node name="stable_camera" type="CheckBox" parent="Panel/VBox/Container/GameOptions/HBox/VBox"]
margin_top = 57.0
margin_right = 512.0
margin_bottom = 110.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Centered Camera"

[node name="brighter_screen" type="CheckBox" parent="Panel/VBox/Container/GameOptions/HBox/VBox"]
margin_top = 114.0
margin_right = 512.0
margin_bottom = 167.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Light Mode"

[node name="ExitOptions" type="Button" parent="Panel/VBox"]
margin_top = 546.0
margin_right = 1024.0
margin_bottom = 597.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "Exit Options"
flat = true

[connection signal="button_down" from="Panel/VBox/HBoxContainer/Audio" to="." method="_on_Audio_button_down"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/Audio" to="." method="_on_Audio_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBox/HBoxContainer/Audio" to="." method="_on_Audio_mouse_exited"]
[connection signal="button_down" from="Panel/VBox/HBoxContainer/Video" to="." method="_on_Video_button_down"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/Video" to="." method="_on_Video_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBox/HBoxContainer/Video" to="." method="_on_Video_mouse_exited"]
[connection signal="button_down" from="Panel/VBox/HBoxContainer/Controls" to="." method="_on_Controls_button_down"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/Controls" to="." method="_on_Controls_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBox/HBoxContainer/Controls" to="." method="_on_Controls_mouse_exited"]
[connection signal="button_down" from="Panel/VBox/HBoxContainer/GameOptions" to="." method="_on_GameOptions_button_down"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/GameOptions" to="." method="_on_GameOptions_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBox/HBoxContainer/GameOptions" to="." method="_on_GameOptions_mouse_exited"]
[connection signal="toggled" from="Panel/VBox/Container/GameOptions/HBox/VBox/always_aim" to="." method="_on_always_aim_toggled"]
[connection signal="toggled" from="Panel/VBox/Container/GameOptions/HBox/VBox/stable_camera" to="." method="_on_stable_camera_toggled"]
[connection signal="toggled" from="Panel/VBox/Container/GameOptions/HBox/VBox/brighter_screen" to="." method="_on_brighter_screen_toggled"]
[connection signal="button_down" from="Panel/VBox/ExitOptions" to="." method="_on_Button_button_down"]
